PopPup not centered corrected

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,6 +74,7 @@ div#board {
 	position: absolute;
 	width: 98%;
 	height: 98%;
+        left: 1%;
 	z-index: 1;
 	background-color: rgba(0,0,0,0.5);
 }
